# Academic_Research

./: .claudeignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  MULTI_AGENT_ARCHITECTURE.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 06bd849e2d45_add_thinking_and_tool_steps_to_messages.py  12dc19c2e570_add_files_table.py  a1b2c3d4e5f6_add_kb_chunks_table.py  aef70e15984b_add_tree_dialogue_fields.py  b3f1c2d4e5a6_add_token_count_to_messages.py  b5d3e2f1a8c9_add_parent_chunks.py  c4e2f1a9b7d0_add_context_tokens_to_messages.py  c9c58872fee4_create_users_table.py  d93ff7120aaf_create_messages_table.py  e8c7ceea96c7_add_knowledge_base_tables.py  fe95147e3e37_create_conversations_table.py
backend/app/: main.py
backend/app/agents/: graph.py  state.py  thinking_chat.py  workers.py
backend/app/agents/mcp/: __init__.py  adapter.py  client.py
backend/app/agents/tools/: bocha.py  rag_search.py  registry.py  sandbox.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  chat.py  conversations.py  files.py  health.py  (+1 more)
backend/app/core/: config.py  database.py  security.py
backend/app/llm/: client.py  token.py
backend/app/models/: __init__.py  conversation.py  file.py  knowledge_base.py  message.py  user.py
backend/app/schemas/: conversation.py  file.py  knowledge_base.py  message.py  user.py
backend/app/services/: chat.py  conversation.py  docmind_service.py  embedding_service.py  file.py  knowledge_base_service.py  milvus_service.py  rag_service.py  rerank_service.py  user.py
backend/scripts/: debug_docmind.py  test_multi_agent.py  test_tools.py
(+33 files in other folders)
