[project]
name = "agent-backend"
version = "0.1.0"
description = "Agent 对话系统 — 后端"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.7.0",
    "redis[asyncio]>=5.2.0",
    "python-dotenv>=1.0.1",
    "pyjwt>=2.8.0",
    "bcrypt>=4.2.0",
    "email-validator>=2.2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv]
package = false
